@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.62 2013/03/11 13:20:14 obache Exp $
+# $NetBSD: Makefile,v 1.63 2013/03/22 12:17:34 obache Exp $
 #
 
-DISTNAME=	mikutter.0.2.1.1137
+DISTNAME=	mikutter.0.2.1.1141
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME:S/./-/}
 CATEGORIES=	net
 MASTER_SITES=	http://mikutter.hachune.net/bin/
