@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.1060 2013/03/28 17:25:07 taca Exp $
+$NetBSD: CHANGES-2013,v 1.1062 2013/03/30 09:31:34 obache Exp $
 
 # PLEASE NOTE THAT PKGSRC IS IN A FREEZE IN PREPARATION FOR THE
 # pkgsrc-2013Q1 BRANCH. PLEASE DO NOT ADD ANY NEW PACKAGES, AND
@@ -1527,3 +1527,5 @@ Changes to the packages collection and infrastructure in 2013:
 	Updated net/bind97 to 9.7.7nb5 [taca 2013-03-27]
 	Updated mail/roundcube to 0.8.6 [taca 2013-03-28]
 	Updated emulators/qemu to 1.3.1 [tsutsui 2013-03-29]
+	Updated emulators/suse121_libxml2 to 12.1nb5 [obache 2013-03-30]
+	Updated net/mikutter to 0.2.1.1141 [obache 2013-03-30]
